# flec

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.beads/: config.yaml  metadata.json
.claude/skills/run-flec/: SKILL.md
.github/workflows/: build.yml  ci.yml  pr-check.yml
.planning/phases/01-setup/: 1-SUMMARY.md
.planning/phases/02-foundational/: 1-SUMMARY.md
.planning/phases/03-wear-detection/: 1-SUMMARY.md
.planning/phases/04-exploration-mode/: 1-SUMMARY.md
.planning/phases/05-challenge-mode/: 1-SUMMARY.md
.planning/phases/06-reading-mode/: 1-SUMMARY.md
.specify/integrations/: claude.manifest.json  speckit.manifest.json
docs/: RUNNING.md
scripts/: download_models.py  list_cameras.py
specs/001-perception-core/: quickstart.md
src/flec/: __init__.py  logger.py  main.py  models.py  session.py
tests/: conftest.py
tests/contract/: __init__.py  conftest.py  test_camera_module.py  test_command_stt.py  test_finger_tracker.py  test_illustration_describer.py  test_ocr_reader.py  test_response_engine.py  test_shape_color_detector.py  test_tts_engine.py  test_wake_word_listener.py  test_wear_detector.py
tests/integration/: __init__.py  conftest.py  test_challenge_mode.py  test_exploration_mode.py  test_reading_mode.py  test_story_mode.py  test_wear_lifecycle.py
tests/unit/: __init__.py  conftest.py  test_finger_tracker_properties.py  test_logging.py  test_low_light_detection.py  test_ocr_worker.py  test_performance.py  test_reading_intent.py  test_reading_session.py  test_shape_color_detector_properties.py
(+46 files in other folders)
